--- a/src/index.css
+++ b/src/index.css
@@ -160,3 +160,16 @@ input {
     outline: none;
   }
 }
+
+@font-face {
+  font-family: "SUIT Variable", sans-serif;
+  src: url(https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css);
+}
+
+@font-face {
+  font-family: "DNFBitBitv2";
+  font-style: normal;
+  font-weight: 400;
+  src: url("//cdn.df.nexon.com/img/common/font/DNFBitBitv2.otf")
+    format("opentype");
+}
